unpackaged/main/default/objects/Financials__c/Financials__c.object-meta.xml
<CustomObject>
    <description>Hold Financials from Hyperion.</description>
    <label>Financials</label>
    <nameField>
        <label>Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>