unpackaged/main/default/objects/Financials__c/fields/DP__c.field-meta.xml
<CustomField>
    <fullName>DP__c</fullName>
    <formula>Direct_Profit__c  /  Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>