unpackaged/main/default/objects/Financials__c/fields/Drapery__c.field-meta.xml
<CustomField>
    <fullName>Drapery__c</fullName>
    <label>Drapery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>