unpackaged/main/default/objects/Financials__c/fields/I_D__c.field-meta.xml
<CustomField>
    <fullName>I_D__c</fullName>
    <label>I&amp;D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>