unpackaged/main/default/objects/Financials__c/fields/Logistics__c.field-meta.xml
<CustomField>
    <fullName>Logistics__c</fullName>
    <label>Logistics</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>