unpackaged/main/default/objects/Financials__c/fields/Marketing_Discretionary_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Discretionary_Revenue__c</fullName>
    <formula>Std_Furniture__c + Std_Carpet__c + Specialty_Furniture__c + Specialty_Carpet__c + I_D__c + Janitorial__c + Graphics__c + Packages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Discretionary Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>