unpackaged/main/default/objects/Financials__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Populated using workflow rule from Opp Type field</description>
    <label>Opportunity Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>