unpackaged/main/default/objects/Financials__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>