unpackaged/main/default/objects/Financials__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <formula>Show_Occurrence__r.Sales_Person__r.FirstName  &amp; &quot; &quot;  &amp;  Show_Occurrence__r.Sales_Person__r.LastName</formula>
    <inlineHelpText>Links to Sales Person on the Show Opportunity.</inlineHelpText>
    <label>Sales Person</label>
    <type>Text</type>
</CustomField>