unpackaged/main/default/objects/Financials__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to Show Occurrence object.</inlineHelpText>
    <label>Show Occurrence</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>