unpackaged/main/default/objects/Financials__c/fields/Show_Occurrence_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link Financial to Show Occurrence Public (copy object) to alow Force.com users (with privileges) to see Financials.</description>
    <label>Show Occurrence Public</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>