unpackaged/main/default/objects/Financials__c/fields/Show_Profit__c.field-meta.xml
<CustomField>
    <fullName>Show_Profit__c</fullName>
    <description>Show Profit</description>
    <label>Show Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>