unpackaged/main/default/objects/Financials__c/fields/SP_Amount_Totals__c.field-meta.xml
<CustomField>
    <fullName>SP_Amount_Totals__c</fullName>
    <formula>IF( RecordType.DeveloperName &lt;&gt; &quot;Show_Profit_Goal&quot;, Show_Profit__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Amount Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>