unpackaged/main/default/objects/Financials__c/fields/Std_Carpet__c.field-meta.xml
<CustomField>
    <fullName>Std_Carpet__c</fullName>
    <label>Std Carpet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>