unpackaged/main/default/objects/Financials__c/fields/Std_Furniture__c.field-meta.xml
<CustomField>
    <fullName>Std_Furniture__c</fullName>
    <label>Std Furniture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>