unpackaged/main/default/objects/Financials__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Actual 90-Day</fullName>
            </value>
            <value>
                <fullName>Actual Continuing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>