unpackaged/main/default/objects/Financials__c/recordTypes/Show_Profit_Goal.recordType-meta.xml
<RecordType>
    <fullName>Show_Profit_Goal</fullName>
    <active>true</active>
    <label>Show Profit Goal</label>
</RecordType>