unpackaged/main/default/objects/Financials__c/listViews/My_Financials.listView-meta.xml
<ListView>
    <fullName>My_Financials</fullName>
    <columns>NAME</columns>
    <columns>Show_Occurrence__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Financials</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>